changed member name and added padding

--- a/index.html
+++ b/index.html
@@ -396,12 +396,13 @@
                         <h1 class="mb-5 text-5xl font-bold text-white">Meet Our Team</h1>
                         <p class="mb-8 text-white">Contrary to popular belief, is not simply random text. It has roots
                             in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+                        <!-- team members -->
                         <div class="flex gap-8 lg:gap-28 flex-wrap flex-col md:flex-row justify-center">
                             <!-- member 1 -->
                             <div class="text-center flex flex-col items-center">
                                 <img src="./images/member1.png" alt="" class="pb-6">
                                 <p class="text-2xl font-bold">Awlad Hossain</p>
-                                <p class="text-base pb-2">Fruits Expert</p>
+                                <p class="text-base pb-3">Fruits Expert</p>
                                 <div class="flex items-center justify-center gap-2">
                                     <a href="#"><img src="./images/icons/facebook.svg" alt=""></i></a>
                                     <a href="#"><img src="./images/icons/twitter.svg" alt=""></i></a>
@@ -411,8 +412,8 @@
                             <!-- member 2 -->
                             <div class="text-center flex flex-col items-center">
                                 <img src="./images/member2.png" alt="" class="pb-6">
-                                <p class="text-2xl font-bold">Awlad Hossain</p>
-                                <p class="text-base pb-2">Fruits Expert</p>
+                                <p class="text-2xl font-bold">Safia Chowdhury</p>
+                                <p class="text-base pb-3">Fruits Expert</p>
                                 <div class="flex items-center justify-center gap-2">
                                     <a href="#"><img src="./images/icons/facebook.svg" alt=""></i></a>
                                     <a href="#"><img src="./images/icons/twitter.svg" alt=""></i></a>
@@ -422,8 +423,8 @@
                             <!-- member 3 -->
                             <div class="text-center flex flex-col items-center">
                                 <img src="./images/member3.png" alt="" class="pb-6">
-                                <p class="text-2xl font-bold">Awlad Hossain</p>
-                                <p class="text-base pb-2">Fruits Expert</p>
+                                <p class="text-2xl font-bold">Rokib Hossain</p>
+                                <p class="text-base pb-3">Fruits Expert</p>
                                 <div class="flex items-center justify-center gap-2">
                                     <a href="#"><img src="./images/icons/facebook.svg" alt=""></i></a>
                                     <a href="#"><img src="./images/icons/twitter.svg" alt=""></i></a>
@@ -433,8 +434,8 @@
                             <!-- member 4 -->
                             <div class="text-center flex flex-col items-center">
                                 <img src="./images/member4.png" alt="" class="pb-6">
-                                <p class="text-2xl font-bold">Awlad Hossain</p>
-                                <p class="text-base pb-2">Fruits Expert</p>
+                                <p class="text-2xl font-bold">Chaity</p>
+                                <p class="text-base pb-3">Fruits Expert</p>
                                 <div class="flex items-center justify-center gap-2">
                                     <a href="#"><img src="./images/icons/facebook.svg" alt=""></i></a>
                                     <a href="#"><img src="./images/icons/twitter.svg" alt=""></i></a>
@@ -443,7 +444,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- team members -->
+                    
                 </div>
             </div>
         </section>
