--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 
     <!-- fontawesome cdn -->
     <script src="https://kit.fontawesome.com/bb64883375.js" crossorigin="anonymous"></script>
+    
 </head>
 
 <body>
+
     <header class="container mx-auto">
         <!-- navigation bar -->
         <nav class="my-12 md:px-4">
@@ -208,8 +210,10 @@
         <section class="px-4">
             <div class="flex flex-col lg:flex-row justify-between items-center">
                 <div class="mb-8 lg:mb-0 mr-0 md:mr-8">
-                    <h2 class="text-3xl md:text-5xl font-extrabold text-dark-color pb-6 text-center md:text-left">Deals of the day</h2>
-                    <p class="text-base text-dark-color font-base text-center md:text-left opacity-75">Contrary to popular belief, is not simply random
+                    <h2 class="text-3xl md:text-5xl font-extrabold text-dark-color pb-6 text-center md:text-left">Deals
+                        of the day</h2>
+                    <p class="text-base text-dark-color font-base text-center md:text-left opacity-75">Contrary to
+                        popular belief, is not simply random
                         text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000
                         years old.</p>
                 </div>
@@ -287,7 +291,7 @@
                                 fill="#FBC0A8" />
                         </svg>
                     </div>
-                    <span class="text-lg text-back-color font-bold mt-3">Details</span>
+                    <a href="#" class="text-lg text-back-color font-bold mt-3">Details</a>
                 </div>
                 <div class="border-2 flex flex-col items-center rounded-lg gap-6 p-12">
                     <img src="./images/fruit7.png" alt="" class="mb-3">
@@ -317,7 +321,7 @@
                                 fill="#FBC0A8" />
                         </svg>
                     </div>
-                    <span class="text-lg text-back-color font-bold mt-3">Details</span>
+                    <a href="#" class="text-lg text-back-color font-bold mt-3">Details</a>
                 </div>
                 <div class="border-2 flex flex-col items-center rounded-lg gap-6 p-12">
                     <img src="./images/fruit8.png" alt="" class="mb-3">
@@ -347,7 +351,7 @@
                                 fill="#FBC0A8" />
                         </svg>
                     </div>
-                    <span class="text-lg text-back-color font-bold mt-3">Details</span>
+                    <a href="#" class="text-lg text-back-color font-bold mt-3">Details</a>
                 </div>
                 <div class="border-2 flex flex-col items-center rounded-lg gap-6 p-12">
                     <img src="./images/fruit9.png" alt="" class="mb-3">
@@ -377,7 +381,7 @@
                                 fill="#FBC0A8" />
                         </svg>
                     </div>
-                    <span class="text-lg text-back-color font-bold mt-3">Details</span>
+                    <a href="#" class="text-lg text-back-color font-bold mt-3">Details</a>
                 </div>
             </div>
             <div class="text-center mt-12">
@@ -444,7 +448,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                 </div>
             </div>
         </section>
@@ -464,27 +468,33 @@
                 <!-- left part -->
                 <div class="order-2 md:order-1">
                     <ul class="flex flex-col md:flex-row items-center md:items-start justify-between gap-8">
-                        <li><img src="./images/icons/team.svg" alt="" class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
+                        <li><img src="./images/icons/team.svg" alt=""
+                                class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
                         <li class="flex flex-col items-center md:items-start px-6 md:px-0">
                             <h3 class="text-2xl font-extrabold text-center md:text-left">Dedicated Team</h3>
                             <hr class="w-24 h-[1px] my-3 border-0 bg-gray-400">
-                            <p class="text-center md:text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            <p class="text-center md:text-left">Professional employees are there for you to pick the
+                                most amazing and fresh fruits.</p>
                         </li>
                     </ul>
                     <ul class="flex flex-col md:flex-row items-center md:items-start justify-between gap-8 my-12">
-                        <li><img src="./images/icons/team.svg" alt="" class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
+                        <li><img src="./images/icons/team.svg" alt=""
+                                class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
                         <li class="flex flex-col items-center md:items-start px-6 md:px-0">
                             <h3 class="text-2xl font-extrabold text-center md:text-left">Dedicated Team</h3>
                             <hr class="w-24 h-[1px] my-3 border-0 bg-gray-400">
-                            <p class="text-center md:text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            <p class="text-center md:text-left">Professional employees are there for you to pick the
+                                most amazing and fresh fruits.</p>
                         </li>
                     </ul>
                     <ul class="flex flex-col md:flex-row items-center md:items-start justify-between gap-8">
-                        <li><img src="./images/icons/team.svg" alt="" class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
+                        <li><img src="./images/icons/team.svg" alt=""
+                                class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
                         <li class="flex flex-col items-center md:items-start px-6 md:px-0">
                             <h3 class="text-2xl font-extrabold text-center md:text-left">Dedicated Team</h3>
                             <hr class="w-24 h-[1px] my-3 border-0 bg-gray-400">
-                            <p class="text-center md:text-left">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            <p class="text-center md:text-left">Professional employees are there for you to pick the
+                                most amazing and fresh fruits.</p>
                         </li>
                     </ul>
                 </div>
@@ -494,33 +504,41 @@
                 </div>
                 <!-- right part -->
                 <div class="order-3">
-                    <ul class="flex flex-col-reverse md:flex-row items-center md:items-start justify-between gap-8">                        
+                    <ul class="flex flex-col-reverse md:flex-row items-center md:items-start justify-between gap-8">
                         <li class="flex flex-col items-center md:items-end px-6 md:px-0">
                             <h3 class="text-2xl font-extrabold text-center md:text-right">Dedicated Team</h3>
                             <hr class="w-24 h-[1px] my-3 border-0 bg-gray-400">
-                            <p class="text-center md:text-right">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            <p class="text-center md:text-right">Professional employees are there for you to pick the
+                                most amazing and fresh fruits.</p>
                         </li>
-                        <li><img src="./images/icons/team.svg" alt="" class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
+                        <li><img src="./images/icons/team.svg" alt=""
+                                class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
                     </ul>
-                    <ul class="flex flex-col-reverse md:flex-row items-center md:items-start justify-between gap-8 py-12">                        
+                    <ul
+                        class="flex flex-col-reverse md:flex-row items-center md:items-start justify-between gap-8 py-12">
                         <li class="flex flex-col items-center md:items-end px-6 md:px-0">
                             <h3 class="text-2xl font-extrabold text-center md:text-right">Dedicated Team</h3>
                             <hr class="w-24 h-[1px] my-3 border-0 bg-gray-400">
-                            <p class="text-center md:text-right">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            <p class="text-center md:text-right">Professional employees are there for you to pick the
+                                most amazing and fresh fruits.</p>
                         </li>
-                        <li><img src="./images/icons/team.svg" alt="" class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
+                        <li><img src="./images/icons/team.svg" alt=""
+                                class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
                     </ul>
-                    <ul class="flex flex-col-reverse md:flex-row items-center md:items-start justify-between gap-8">                        
+                    <ul class="flex flex-col-reverse md:flex-row items-center md:items-start justify-between gap-8">
                         <li class="flex flex-col items-center md:items-end px-6 md:px-0">
                             <h3 class="text-2xl font-extrabold text-center md:text-right">Dedicated Team</h3>
                             <hr class="w-24 h-[1px] my-3 border-0 bg-gray-400">
-                            <p class="text-center md:text-right">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            <p class="text-center md:text-right">Professional employees are there for you to pick the
+                                most amazing and fresh fruits.</p>
                         </li>
-                        <li><img src="./images/icons/team.svg" alt="" class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
+                        <li><img src="./images/icons/team.svg" alt=""
+                                class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
                     </ul>
                 </div>
             </div>
         </section>
+        <!-- ====== end ===== -->
     </main>
 
     <footer class="bg-dark-color py-36">
@@ -549,6 +567,7 @@
             </ul>
         </nav>
     </footer>
+
 </body>
 
 </html>
