added modal pop up for banana details

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- fontawesome cdn -->
     <script src="https://kit.fontawesome.com/bb64883375.js" crossorigin="anonymous"></script>
-    
+
 </head>
 
 <body>
@@ -381,7 +381,7 @@
                                 fill="#FBC0A8" />
                         </svg>
                     </div>
-                    <a href="#" class="text-lg text-back-color font-bold mt-3">Details</a>
+                    <a href="#my_modal_4" class="text-lg text-back-color font-bold mt-3">Details</a>
                 </div>
             </div>
             <div class="text-center mt-12">
@@ -568,6 +568,21 @@
         </nav>
     </footer>
 
+    <!-- modals section -->
+    <div class="modal" id="my_modal_4">
+        <div class="modal-box text-dark-color text-center flex flex-col items-center">
+            <img src="./images/fruit9.png" alt="">
+            <h3 class="font-extrabold text-4xl">Banana</h3>
+            <p class="py-4 opacity-75">Professional employees are there for you to pick the most amazing and fresh
+                fruits.</p>
+            <div class="modal-action">
+                <a href="#" class="border-back-color border px-8 py-4 rounded-lg font-black text-back-color">Close</a>
+                <a href="#" class="border-none bg-back-color border px-8 py-4 rounded-lg font-black text-white">Buy
+                    Now</a>
+            </div>
+        </div>
+    </div>
+    <!-- ====== end ===== -->
 </body>
 
 </html>
