--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                                 fill="#FBC0A8" />
                         </svg>
                     </div>
-                    <a href="#" class="text-lg text-back-color font-bold mt-3">Details</a>
+                    <a href="#my_modal_1" class="text-lg text-back-color font-bold mt-3">Details</a>
                 </div>
                 <div class="border-2 flex flex-col items-center rounded-lg gap-6 p-12">
                     <img src="./images/fruit7.png" alt="" class="mb-3">
@@ -321,7 +321,7 @@
                                 fill="#FBC0A8" />
                         </svg>
                     </div>
-                    <a href="#" class="text-lg text-back-color font-bold mt-3">Details</a>
+                    <a href="#my_modal_2" class="text-lg text-back-color font-bold mt-3">Details</a>
                 </div>
                 <div class="border-2 flex flex-col items-center rounded-lg gap-6 p-12">
                     <img src="./images/fruit8.png" alt="" class="mb-3">
@@ -351,7 +351,7 @@
                                 fill="#FBC0A8" />
                         </svg>
                     </div>
-                    <a href="#" class="text-lg text-back-color font-bold mt-3">Details</a>
+                    <a href="#my_modal_3" class="text-lg text-back-color font-bold mt-3">Details</a>
                 </div>
                 <div class="border-2 flex flex-col items-center rounded-lg gap-6 p-12">
                     <img src="./images/fruit9.png" alt="" class="mb-3">
@@ -569,12 +569,62 @@
     </footer>
 
     <!-- modals section -->
+    <!-- modal 1 -->
+    <div class="modal" id="my_modal_1">
+        <div class="modal-box text-dark-color text-center flex flex-col items-center px-20 py-16">
+            <img src="./images/fruit6.png" alt="" class="py-4">
+            <h3 class="font-extrabold text-4xl">Apple</h3>
+            <p class="py-4 opacity-75">Professional employees are there for you to pick the most amazing and fresh
+                fruits.</p>
+                <img src="./images/icons/rating.svg" alt="" class="py-4">
+            <div class="modal-action">
+                <a href="#" class="border-back-color border px-8 py-4 rounded-lg font-black text-back-color">Close</a>
+                <a href="#" class="border-none bg-back-color border px-8 py-4 rounded-lg font-black text-white">Buy
+                    Now</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- modal 2 -->
+    <div class="modal" id="my_modal_2">
+        <div class="modal-box text-dark-color text-center flex flex-col items-center px-20 py-16">
+            <img src="./images/fruit7.png" alt="" class="py-4">
+            <h3 class="font-extrabold text-4xl">Orange</h3>
+            <p class="py-4 opacity-75">Professional employees are there for you to pick the most amazing and fresh
+                fruits.</p>
+                <img src="./images/icons/rating.svg" alt="" class="py-4">
+            <div class="modal-action">
+                <a href="#" class="border-back-color border px-8 py-4 rounded-lg font-black text-back-color">Close</a>
+                <a href="#" class="border-none bg-back-color border px-8 py-4 rounded-lg font-black text-white">Buy
+                    Now</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- modal 3 -->
+    <div class="modal" id="my_modal_3">
+        <div class="modal-box text-dark-color text-center flex flex-col items-center px-20 py-16">
+            <img src="./images/fruit8.png" alt="" class="py-4">
+            <h3 class="font-extrabold text-4xl">Dragon Fruit</h3>
+            <p class="py-4 opacity-75">Professional employees are there for you to pick the most amazing and fresh
+                fruits.</p>
+                <img src="./images/icons/rating.svg" alt="" class="py-4">
+            <div class="modal-action">
+                <a href="#" class="border-back-color border px-8 py-4 rounded-lg font-black text-back-color">Close</a>
+                <a href="#" class="border-none bg-back-color border px-8 py-4 rounded-lg font-black text-white">Buy
+                    Now</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- modal 4 -->
     <div class="modal" id="my_modal_4">
-        <div class="modal-box text-dark-color text-center flex flex-col items-center">
-            <img src="./images/fruit9.png" alt="">
+        <div class="modal-box text-dark-color text-center flex flex-col items-center px-20 py-16">
+            <img src="./images/fruit9.png" alt="" class="py-4">
             <h3 class="font-extrabold text-4xl">Banana</h3>
             <p class="py-4 opacity-75">Professional employees are there for you to pick the most amazing and fresh
                 fruits.</p>
+                <img src="./images/icons/rating.svg" alt="" class="py-4">
             <div class="modal-action">
                 <a href="#" class="border-back-color border px-8 py-4 rounded-lg font-black text-back-color">Close</a>
                 <a href="#" class="border-none bg-back-color border px-8 py-4 rounded-lg font-black text-white">Buy
