changed padding of modals pop up

--- a/index.html
+++ b/index.html
@@ -571,12 +571,12 @@
     <!-- modals section -->
     <!-- modal 1 -->
     <div class="modal" id="my_modal_1">
-        <div class="modal-box text-dark-color text-center flex flex-col items-center px-20 py-16">
+        <div class="modal-box text-dark-color text-center flex flex-col items-center px-10 md:px-20 py-16">
             <img src="./images/fruit6.png" alt="" class="py-4">
             <h3 class="font-extrabold text-4xl">Apple</h3>
             <p class="py-4 opacity-75">Professional employees are there for you to pick the most amazing and fresh
                 fruits.</p>
-                <img src="./images/icons/rating.svg" alt="" class="py-4">
+            <img src="./images/icons/rating.svg" alt="" class="py-4">
             <div class="modal-action">
                 <a href="#" class="border-back-color border px-8 py-4 rounded-lg font-black text-back-color">Close</a>
                 <a href="#" class="border-none bg-back-color border px-8 py-4 rounded-lg font-black text-white">Buy
@@ -587,12 +587,12 @@
 
     <!-- modal 2 -->
     <div class="modal" id="my_modal_2">
-        <div class="modal-box text-dark-color text-center flex flex-col items-center px-20 py-16">
+        <div class="modal-box text-dark-color text-center flex flex-col items-center px-10 md:px-20 py-16">
             <img src="./images/fruit7.png" alt="" class="py-4">
             <h3 class="font-extrabold text-4xl">Orange</h3>
             <p class="py-4 opacity-75">Professional employees are there for you to pick the most amazing and fresh
                 fruits.</p>
-                <img src="./images/icons/rating.svg" alt="" class="py-4">
+            <img src="./images/icons/rating.svg" alt="" class="py-4">
             <div class="modal-action">
                 <a href="#" class="border-back-color border px-8 py-4 rounded-lg font-black text-back-color">Close</a>
                 <a href="#" class="border-none bg-back-color border px-8 py-4 rounded-lg font-black text-white">Buy
@@ -603,12 +603,12 @@
 
     <!-- modal 3 -->
     <div class="modal" id="my_modal_3">
-        <div class="modal-box text-dark-color text-center flex flex-col items-center px-20 py-16">
+        <div class="modal-box text-dark-color text-center flex flex-col items-center px-10 md:px-20 py-16">
             <img src="./images/fruit8.png" alt="" class="py-4">
             <h3 class="font-extrabold text-4xl">Dragon Fruit</h3>
             <p class="py-4 opacity-75">Professional employees are there for you to pick the most amazing and fresh
                 fruits.</p>
-                <img src="./images/icons/rating.svg" alt="" class="py-4">
+            <img src="./images/icons/rating.svg" alt="" class="py-4">
             <div class="modal-action">
                 <a href="#" class="border-back-color border px-8 py-4 rounded-lg font-black text-back-color">Close</a>
                 <a href="#" class="border-none bg-back-color border px-8 py-4 rounded-lg font-black text-white">Buy
@@ -619,12 +619,12 @@
 
     <!-- modal 4 -->
     <div class="modal" id="my_modal_4">
-        <div class="modal-box text-dark-color text-center flex flex-col items-center px-20 py-16">
+        <div class="modal-box text-dark-color text-center flex flex-col items-center px-10 md:px-20 py-16">
             <img src="./images/fruit9.png" alt="" class="py-4">
             <h3 class="font-extrabold text-4xl">Banana</h3>
             <p class="py-4 opacity-75">Professional employees are there for you to pick the most amazing and fresh
                 fruits.</p>
-                <img src="./images/icons/rating.svg" alt="" class="py-4">
+            <img src="./images/icons/rating.svg" alt="" class="py-4">
             <div class="modal-action">
                 <a href="#" class="border-back-color border px-8 py-4 rounded-lg font-black text-back-color">Close</a>
                 <a href="#" class="border-none bg-back-color border px-8 py-4 rounded-lg font-black text-white">Buy
