--- a/index.html
+++ b/index.html
@@ -478,20 +478,20 @@
                         </li>
                     </ul>
                     <ul class="flex flex-col md:flex-row items-center md:items-start justify-between gap-8 my-12">
-                        <li><img src="./images/icons/team.svg" alt=""
+                        <li><img src="./images/icons/fresh.svg" alt=""
                                 class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
                         <li class="flex flex-col items-center md:items-start px-6 md:px-0">
-                            <h3 class="text-2xl font-extrabold text-center md:text-left">Dedicated Team</h3>
+                            <h3 class="text-2xl font-extrabold text-center md:text-left">Fresh is Best</h3>
                             <hr class="w-24 h-[1px] my-3 border-0 bg-gray-400">
                             <p class="text-center md:text-left">Professional employees are there for you to pick the
                                 most amazing and fresh fruits.</p>
                         </li>
                     </ul>
                     <ul class="flex flex-col md:flex-row items-center md:items-start justify-between gap-8">
-                        <li><img src="./images/icons/team.svg" alt=""
+                        <li><img src="./images/icons/gift.svg" alt=""
                                 class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
                         <li class="flex flex-col items-center md:items-start px-6 md:px-0">
-                            <h3 class="text-2xl font-extrabold text-center md:text-left">Dedicated Team</h3>
+                            <h3 class="text-2xl font-extrabold text-center md:text-left">Gift Certificates</h3>
                             <hr class="w-24 h-[1px] my-3 border-0 bg-gray-400">
                             <p class="text-center md:text-left">Professional employees are there for you to pick the
                                 most amazing and fresh fruits.</p>
@@ -506,33 +506,32 @@
                 <div class="order-3">
                     <ul class="flex flex-col-reverse md:flex-row items-center md:items-start justify-between gap-8">
                         <li class="flex flex-col items-center md:items-end px-6 md:px-0">
-                            <h3 class="text-2xl font-extrabold text-center md:text-right">Dedicated Team</h3>
+                            <h3 class="text-2xl font-extrabold text-center md:text-right">Integrated Supplier</h3>
                             <hr class="w-24 h-[1px] my-3 border-0 bg-gray-400">
                             <p class="text-center md:text-right">Professional employees are there for you to pick the
                                 most amazing and fresh fruits.</p>
                         </li>
-                        <li><img src="./images/icons/team.svg" alt=""
+                        <li><img src="./images/icons/supplier.svg" alt=""
                                 class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
                     </ul>
-                    <ul
-                        class="flex flex-col-reverse md:flex-row items-center md:items-start justify-between gap-8 py-12">
+                    <ul class="flex flex-col-reverse md:flex-row items-center md:items-start justify-between gap-8 py-12">
                         <li class="flex flex-col items-center md:items-end px-6 md:px-0">
-                            <h3 class="text-2xl font-extrabold text-center md:text-right">Dedicated Team</h3>
+                            <h3 class="text-2xl font-extrabold text-center md:text-right">Sustainable Practice</h3>
                             <hr class="w-24 h-[1px] my-3 border-0 bg-gray-400">
                             <p class="text-center md:text-right">Professional employees are there for you to pick the
                                 most amazing and fresh fruits.</p>
                         </li>
-                        <li><img src="./images/icons/team.svg" alt=""
+                        <li><img src="./images/icons/sustain.svg" alt=""
                                 class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
                     </ul>
                     <ul class="flex flex-col-reverse md:flex-row items-center md:items-start justify-between gap-8">
                         <li class="flex flex-col items-center md:items-end px-6 md:px-0">
-                            <h3 class="text-2xl font-extrabold text-center md:text-right">Dedicated Team</h3>
+                            <h3 class="text-2xl font-extrabold text-center md:text-right">The Benefits Only</h3>
                             <hr class="w-24 h-[1px] my-3 border-0 bg-gray-400">
                             <p class="text-center md:text-right">Professional employees are there for you to pick the
                                 most amazing and fresh fruits.</p>
                         </li>
-                        <li><img src="./images/icons/team.svg" alt=""
+                        <li><img src="./images/icons/benefits.svg" alt=""
                                 class="p-5 bg-gray-200 rounded-full max-w-none mt-2"></li>
                     </ul>
                 </div>
