changed logo text in nav

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <div class="navbar-center">
                     <img src="./images/logo.png" alt="" class="w-6 lg:w-12">
-                    <a class="btn btn-ghost normal-case text-base lg:text-4xl font-bold">Fruit Burst</a>
+                    <a class="btn btn-ghost normal-case text-base lg:text-4xl font-bold">Only Fruits</a>
                 </div>
 
                 <div class="navbar-end">
