added link to logo

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 </div>
 
                 <div class="navbar-center">
-                    <img src="./images/logo.png" alt="" class="w-6 lg:w-12">
-                    <a class="btn btn-ghost normal-case text-base lg:text-4xl font-bold">Only Fruits</a>
+                    <a href=" https://askatash.github.io/Only-Fruits/"><img src="./images/logo.png" alt="" class="w-6 lg:w-12"></a>
+                    <a href=" https://askatash.github.io/Only-Fruits/" class="btn btn-ghost normal-case text-base lg:text-4xl font-bold">Only Fruits</a>
                 </div>
 
                 <div class="navbar-end">
